--- a/inTown/mainDesignTown.css
+++ b/inTown/mainDesignTown.css
@@ -10,12 +10,12 @@ body
 {
 	width: 1200px;
 	min-height: 100%;
-        display: table;
+    display: table;
 	margin: auto;
 	text-align: left;
 	color: black;
 	border: 1px solid #888999;
-	background-color:#4E3F32;
+	background-color: #786452;
 	padding: 20px;
 	font-family:Verdana, Geneva, sans-serif;
 
@@ -29,6 +29,7 @@ body
 	border: 2px solid #000000;
 	background-color: #443525;
 	color: #FFFFFF;
+	box-shadow: 7px 7px #333333;
 }
 
 .bottomBar
@@ -65,12 +66,13 @@ body
 .taskBox
 {
 	float: left;
-        min-width: 13%;
-        max-width: 13%;
-	background-color:#CEA37E;
+    min-width: 13%;
+    max-width: 13%;
+	background-color: #A5907E;
 	border: 2px solid #000000;
 	padding: 4px;
-	margin: auto;
+	margin: 25px;
+	box-shadow: 7px 7px #333333;
 }
 
 .taskBox img
@@ -78,18 +80,20 @@ body
     display: block;
     padding: auto;
     margin: 10px auto;
+	box-shadow: 5px 5px #333333;
 }
 
 .centralBox
 {
 	float: right;
 	width: 70%;
-	background-color:#CEA37E;
+	background-color: #A5907E;
 	border: 2px solid #000000;
 	padding: 15px;
 	margin-top: 25px;
 	margin-right: 30px;
 	color: black;
+	box-shadow: 7px 7px #333333;
 }
 
 .centralBoxTop
@@ -144,23 +148,24 @@ body
 
 .infoSet1
 {
-	float: left;
+	float:left;
 	border: 1px solid black;
 	padding-left: 10px;
 	padding-right: 10px;
 	background-color:#6d5846;
 	color:#000000;
+	box-shadow: 7px 7px #333333;
 }
 
 .infoSet2
 {
-	float: right;
+	float: left;
 	padding-left: 10px;
 	padding-right: 10px;
 	border: 1px solid black;
 	background-color:#6d5846;
 	color:#000000;
-	
+	box-shadow: 7px 7px #333333;
 	
 }
 
