--- a/css/outside.css
+++ b/css/outside.css
@@ -68,7 +68,9 @@ and open the template in the editor.
 	#comma{width:5%;}
 	#zedCount {width: 50%;text-align: left; padding-left: 5px; padding-top: 2px;}
 	#xco {width: 22.5%;text-align: right;}
-	#yco {width: 22.5%;text-align: left;}
+        #yco {width: 22.5%;text-align: left;}
+        #remoteXco {width: 22.5%;text-align: right;}
+	#remoteYco {width: 22.5%;text-align: left;}
         #items{overflow-y: auto; border: 1px solid #000000; max-width:140px;}
         #itemsDiv {min-height: 100px; overflow-y: auto;}
 	.data {border-bottom:1px solid black; background-color:#6d5846;}
@@ -87,7 +89,22 @@ and open the template in the editor.
         #lootForm{text-align: center;}
         #lootCell{text-align: center;}
         .centralBox{height: 600px;}
-        .fillerBox{border: 1px solid black; width: 25%; height: 280px; float: left; position: relative; top: 50px; background-color:#6D5A4A; box-shadow: 7px 7px #333333; margin-left: 5px;}
+        .fillerBox{border: 1px solid black; width: 25%; height: 280px; float: left; position: relative; top: 50px; background-color:#6D5A4A; box-shadow: 7px 7px #333333; margin-left: 5px; overflow-y: visible;}
 
 	.selected {border: 1px solid black;}
-	.notSelected {border: 0px solid red;}
+        .notSelected {border: 0px solid red;}
+        
+        .remoteInfo{
+        float: right;
+	border: 1px solid black;
+	border-collapse: collapse;
+	width: 195px;
+	height: 125px;
+	margin: 10px;
+	overflow-x: auto;
+	overflow-y: scroll;
+        background-color:#6D5A4A;
+        box-shadow: 7px 7px #333333;
+        clear: right;
+        position: relative;
+}
