Started Colour Bulletins

--- a/inTown/mainDesignTown.css
+++ b/inTown/mainDesignTown.css
@@ -215,3 +215,15 @@ body
 	display: inline-block;
 	margin-right: 7px;
 }
+
+yellow{
+	color: #FFCC55;
+}
+
+red{
+	color: #C33333;
+}
+
+green{
+	color: #336633;
+}
