--- a/css/header.css
+++ b/css/header.css
@@ -72,14 +72,14 @@
     border-radius: 4px;
     background-color: #54483E;
     border: none;
-    color: #A39D8D;
+    color: #3DAF3D;
     text-align: center;
     font-size: 16px;
     padding: 5px;
     width: 150px;
     transition: all 0.5s;
     cursor: pointer;
-    margin: -5px 5px 5px 5px
+    margin: -5px 5px 5px 5px;
     box-shadow: 3px 2px black;
 }
 
@@ -119,18 +119,49 @@
     box-shadow: none;
 }
 
-/* input[type=submit]{
-    width: 99%;
-    background-color: #54483E;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 5px;
-    border: none;
+.endButtonDisabled {
+    display: inline-block;
     border-radius: 4px;
-    cursor: pointer;
-    box-shadow: 3px 2px black;
+    background-color: #54483E;
+    border: none;
+    color: #A39D8D;
+    text-align: center;
+    font-size: 16px;
+    padding: 5px;
+    width: 150px;
+    transition: all 0.5s;
+    cursor: default;
+    margin: -5px 5px 5px 5px;
 }
 
-input[type=submit]:hover{
-    background-color: #47372A;
-} */
+.endButtonDisabled span {
+    cursor: default;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.headNavArrowLeft{
+    height: 25px; 
+    width: 16px; 
+    margin-bottom: -10px; 
+    position: relative; 
+    top: -5px;
+}
+
+.headNavArrowRight{
+    height: 25px; 
+    width: 16px; 
+    margin-bottom: -10px; 
+    position: relative; 
+    top: -4px;
+}
+.headNavArrowRight:hover{
+    filter:brightness(0.8);
+    cursor: pointer;
+}
+
+.headNavArrowLeft:hover{
+    filter:brightness(0.8);
+    cursor: pointer;
+}
