--- a/mainDesign.css
+++ b/mainDesign.css
@@ -9,7 +9,8 @@ body
 
 .container 
 {
-	width: 1200px;
+	width: 95%;
+	min-width: 400px;
 	overflow: auto;
 	margin: auto;
 	text-align: left;
@@ -21,13 +22,18 @@ body
 
 .header
 {
-	width: 736px;
+	width: 80%;
+	max-width: 600px;
 	margin: auto;
 	text-align: center;
 	border: 2px solid #000000;
 	background-color: #443525;
 	color: #000000;
 	box-shadow: 7px 7px #333333;
+}
+
+.header img{
+	width: 100%;
 }
 
 .bottomBar
@@ -63,9 +69,9 @@ body
 .news
 {
 	font-size: 75%;
-	width:60%;
+	width:55%;
 	height: 360px;
-	margin: 80px auto;
+	margin: 5% auto;
 	float: left;
 	color: black;
 	background-color: #A5907E;
@@ -87,7 +93,7 @@ body
 {
 	padding-top: 20px;
 	width: 30%;
-	margin: 80px auto;
+	margin: 5% auto;
 	background-color: #A5907E;
 	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 	color: black;
@@ -108,6 +114,7 @@ body
 {
 	margin: 5px 0px 5px;
 	font-size: 14px;
+	width: 90%;
 	color: #FFFFFF;
 	background-color: #252525;
 	border: 1px solid #000000;
@@ -139,8 +146,9 @@ body
 {
 	padding: 10px;
 	width: 90%;
+	min-width: 350px;
 	float: left;
-	margin-left: 30px;
+	margin-left: 5%;
 	background-color: #A5907E;
 	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 	color: black;
@@ -151,11 +159,12 @@ body
 
 .browseBlock
 {
-	padding-top: 20px;
-	width: 45%;
+	padding-top: 10px;
+	width: 50%;
+	min-width: 380px;
 	height: 360px;
-	margin: 25px auto;
-	margin-left: 30px;
+	margin: 5% auto;
+	margin-left: 5%; 
 	float: left;
 	color: black;
 	background-color: #A5907E;
@@ -191,17 +200,16 @@ body
 
 .infoBlock
 {
-	display: block;
+	display: inline-block;
 	text-align: center;
 	padding-top: 30px;
-	padding-left: 0px;
-	margin-left: 20px;
-	margin-top: 25px;
-	margin-right: 30px;
-	width: 40%;
+	margin: 5% auto;
+	margin-left: 5%;
+	width: 35%;
+	min-width: 200px;
 	height: 200px;
 	color: black;
-	float:right;
+	/* float:left; */
 	background-color: #A5907E;
 	border: 2px solid #000000;
 	box-shadow: 7px 7px #333333;
@@ -290,23 +298,40 @@ td.build
 	border: 1px solid #000000;
 }
 
+.spacerCombo{
+	height: 170px;
+	width: 45%;
+	float: left;
+	margin-right: 5%;
+}
+
+.spacer:hover, .spacer2:hover {
+	cursor: pointer;
+}
+
 .spacer
 {
-	width: 45%;
-	height: auto;
+	max-width: 100%;
 	float: left;
 	color: black;
+	overflow-y: auto;
+	text-align: center;
+	margin-right: 10%;
 	/*margin: 20px auto;
 	padding: 20px auto;*/
 }
 
 .spacer2
 {
-	width: 45%;
-	height: auto;
-	float: right;
+	max-width: 100%;
+	float: left;
 	color: black;
+	overflow-y: auto;
 	/*margin: 20px auto;*/
+}
+
+.charClass:hover{
+	cursor: pointer;
 }
 
 .infoBlock input[type="submit"]
