--- a/css/construction.css
+++ b/css/construction.css
@@ -8,7 +8,7 @@ and open the template in the editor.
     Author     : Dingo
 */
 
-       	table {
+       	table, table tbody, table thead {
             width:100%;
             color:#000000;
             border: 1px solid #120B06;
@@ -16,6 +16,17 @@ and open the template in the editor.
             background-color:#6D5A4A;
             box-shadow: 7px 7px #333333;
             border-collapse: collapse;
+            table-layout:fixed;
+        }
+
+        td, th{
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
+        tr{
+            width:100%;
         }
         
         td:first-child {
@@ -40,15 +51,51 @@ and open the template in the editor.
 	}
         .apInput
         {
-            width: 50px;
+            width: 40px;
             border-radius: 7px;
             margin-right: 8px;
-            float: right;
+            margin-left: 8px;
         }
-        
+.pointer{
+    cursor: pointer;
+}        
+
+.pointerWhite{
+    background: rgba(255, 255, 255, 0.15);
+}
+
+.pointerGreen{
+    background: rgba(55, 219, 55, 0.15);
+}
+
+.pointerRed{
+    background: rgba(255, 89, 153, 0.15);
+}
+
+.pointerBlue{
+    background: rgba(55, 132, 219, 0.15);
+    border: 1px solid black;
+}
+
+#apAssigned{
+    /* float:right; */
+}
+
+.individualCost{
+    border: 1px solid black;
+    padding: 2px;
+    border-radius: 3px;
+    background-color: #6d5846;
+}
+
+        .buttonSpan{
+            /* float:right; */
+            margin-top: -8px;
+        }
+
     .buildButton {
     display: inline-block;
-    float: right;
+    /* float: right; */
     border-radius: 4px;
     background-color: #54483E;
     border: none;
@@ -97,4 +144,27 @@ and open the template in the editor.
     .buildButton:active
     {
     box-shadow: none;
+    }
+
+
+    .infoBlock{
+        display: inline-block;
+        width: 85%;
+        min-height: 200px;
+        background-color: #A5907E;
+        border: 2px solid #000000;
+        padding: 15px;
+        margin: 25px auto;
+        margin-left: 5%;
+        color: black;
+        box-shadow: 7px 7px #333333;
+    }
+
+    .buildingImage{
+        width: 64px;
+        border: 2px solid #000000;
+        box-shadow: 4px 4px #333333;
+        float: left;
+        margin-right: 15px;
+        margin-bottom: 10px;
     }
