--- a/css/header.css
+++ b/css/header.css
@@ -17,7 +17,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding-bottom: 8px;
     position: absolute;
     z-index: 1;
     bottom: 125%;
