--- a/inTown/mainDesignTown.css
+++ b/inTown/mainDesignTown.css
@@ -11,6 +11,7 @@ body
 	width: 95%;
 	min-width: 400px;
 	min-height: 100%;
+	overflow: auto;
     display: table;
 	margin: auto;
 	text-align: left;
@@ -24,13 +25,18 @@ body
 
 .header
 {
-	width: 736px;
+	width: 80%;
+	max-width: 600px;
 	margin: auto;
 	text-align: center;
 	border: 2px solid #000000;
 	background-color: #443525;
 	color: #FFFFFF;
 	box-shadow: 7px 7px #333333;
+}
+
+.header img{
+	width: 100%;
 }
 
 .bottomBar
@@ -64,37 +70,56 @@ body
 	/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abeef', endColorstr='#71b9ed',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
-.taskBox
-{
-    float: left;
-    min-width: 13%;
-    max-width: 13%;
+.taskBox{
+	min-width: 75px;
+	max-width: 700px;
+    width: 90%;
     background-color: #A5907E;
     border: 2px solid #000000;
     padding: 4px;
-    margin: 25px;
-    box-shadow: 7px 7px #333333;
+    margin: 25px auto;
+	box-shadow: 7px 7px #333333;
+	
+	display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
 }
 
-.taskBox img
-{
-    display: block;
-    padding: auto;
+.taskBox div img{
+    display: inline-block;
+	padding: auto;
     margin: 10px auto;
     box-shadow: 5px 5px #333333;
 }
 
+.taskBox div{
+	min-width: 38px;
+	max-width: 330px;
+    width: 95%;
+    background-color: #A5907E;
+	margin: 2px auto;
+	padding: 0 10px;
+	
+	display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+}
+
 .centralBox
 {
-	float: right;
-	width: 70%;
+	display: inline-block;
+	width: 85%;
 	background-color: #A5907E;
 	border: 2px solid #000000;
 	padding: 15px;
-	margin-top: 25px;
-	margin-right: 30px;
+	margin: 25px auto;
+	margin-left: 5%;
 	color: black;
 	box-shadow: 7px 7px #333333;
+}
+
+.centralBox *{
+	margin: auto;
 }
 
 .centralBoxTop
@@ -120,11 +145,6 @@ body
 	padding-left: 10px;
 }
 
-.centralBox img
-{
-	/*padding-right:20px;*/
-}
-
 .xpBar
 {
 	float:left;
@@ -141,33 +161,43 @@ body
 
 .infoSet
 {
-	float: left;
-	margin-left: 30px;
+	/* float: left; */
+	margin: 0 auto;
 	margin-top: 15px;
-	width: 92.5%;
+	width: 100%;
+	height: auto;
 }
 
 .infoSet1
 {
-	float:left;
-	border: 1px solid black;
+	margin-left: 0;
+	margin-right: -6;
+	height: 50px;
+	vertical-align: top;
 	padding-left: 10px;
 	padding-right: 10px;
+	border: 1px solid black;
 	background-color:#6d5846;
 	color:#000000;
-	box-shadow: 7px 7px #333333;
+	box-shadow:7px 7px #333333;
+	text-align: center;
+	display: inline-block;
 }
 
 .infoSet2
 {
-	float: right;
+	margin-left: 0;
+	margin-right: -6;
+	height: 50px;
+	vertical-align: top;
 	padding-left: 10px;
 	padding-right: 10px;
 	border: 1px solid black;
 	background-color:#6d5846;
 	color:#000000;
-	box-shadow:-7px 7px #333333;
+	box-shadow:7px 7px #333333;
 	text-align: center;
+	display: inline-block;
 }
 
 .infoSet3
@@ -186,28 +216,18 @@ body
 	display: inline-block;
 }
 
+.headerTop{
+	width: auto;
+	margin: 0 auto;
+	text-align: center;
+	/* float: left; */
+}
+
 .headerBottom{
 	width: auto;
 	margin: 0 auto;
 	text-align: center;
-	float: left;
-}
-
-.zoneInfo
-{
-	float: right;
-	border: 1px solid black;
-	border-collapse: collapse;
-	width: 150px;
-	height: 125px;
-	margin: 10px;
-	overflow-x: auto;
-	overflow-y: scroll;
-        background-color:#6D5A4A;
-        box-shadow: 7px 7px #333333;
-        clear: right;
-        position: relative;
-        top: 50px;
+	/* float: left; */
 }
 
 .itemInfo
