--- a/inTown/mainDesignTown.css
+++ b/inTown/mainDesignTown.css
@@ -262,7 +262,7 @@ body
 }
 
 yellow{
-	color: #FFCC55;
+	color: #D4AF37;
 	text-shadow: 1px 1px #131313;
 }
 
@@ -277,4 +277,9 @@ green{
 
 litegreen{
 	color: #3DAF3D;
+}
+
+.storageCategory{
+	border: 1px solid black;
+	padding: 5px;
 }
