--- a/css/joinTown.css
+++ b/css/joinTown.css
@@ -1,12 +1,24 @@
-.townList{
-    width:85%;
-    margin: auto;
-    color:#000000;
+
+table, table tbody, table thead {
+    width: 98%;
+    color: #000000;
     border: 1px solid #120B06;
-    padding:2px;
-    background-color:#6D5A4A;
-    box-shadow: 7px 7px #333333;
+    padding: 2px;
+    background-color: #6D5A4A;
+    box-shadow: 4px 4px #333333;
     border-collapse: collapse;
+    table-layout: fixed;
+}
+
+.townListContainer{
+    width: 100%;
+    margin-left: 1%;
+}
+
+th, td{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .townList td:last-child{
@@ -19,7 +31,6 @@ thead th{
 
 .joinButton {
     display: inline-block;
-    float: right;
     border-radius: 4px;
     background-color: #54483E;
     border: none;
@@ -27,7 +38,7 @@ thead th{
     text-align: center;
     font-size: 16px;
     padding: 5px;
-    width: 150px;
+    width: 90px;
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
@@ -91,7 +102,7 @@ input[type=text], select{
 }
 
 input[type=submit]{
-    width: 99%;
+    width: 98%;
     background-color: #54483E;
     color: white;
     padding: 14px 20px;
