--- a/inTown/mainDesignTown.css
+++ b/inTown/mainDesignTown.css
@@ -266,6 +266,10 @@ yellow{
 	text-shadow: 1px 1px #131313;
 }
 
+gray{
+	color: rgb(60, 60, 60);
+}
+
 red{
 	color: #C33333;
 	text-shadow: 1px 1px #131313;
@@ -277,6 +281,10 @@ green{
 
 litegreen{
 	color: #3DAF3D;
+}
+
+blue{
+	color: rgb(20,75,240);
 }
 
 .storageCategory{
